# Opencv-color-detection

./: README.md  app.py  pyproject.toml  requirements.txt
