[tool.poetry]
name = "opencv-color-detection"
version = "0.1.0"
description = ""
authors = ["Nikhil Maheshwari <nikhilm@webelight.co.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.1"
streamlit-webrtc = "^0.62.4"
opencv-python-headless = "^4.11.0.86"
numpy = ">=2.0.0,<2.3.0"
opencv-python = "^4.12.0.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
